y.output
Terminals unused in grammar

   TYPEDEF
   EXTERN
   STATIC
   AUTO
   REGISTER
   SHORT
   LONG
   SIGNED
   UNSIGNED
   DOUBLE
   CONST
   VOLATILE
   VOID
   STRUCT
   UNION
   ENUM
   ELLIPSIS
   CASE
   DEFAULT
   SWITCH
   DO
   FOR
   RETURN
   SIZEOF


State 45 conflicts: 1 shift/reduce


Grammar

    0 $accept: input $end

    1 input: /* empty */
    2      | input statement

    3 statement: declaration_statement
    4          | jump_statement
    5          | expression_statement
    6          | error
    7          | selection_statement
    8          | iterative_statement

    9 expression_statement: expr ';'
   10                     | ';'

   11 jump_statement: CONTINUE ';'
   12               | BREAK ';'
   13               | GOTO IDENTIFIER ';'

   14 iterative_statement: while_loop

   15 while_loop: while_clause statement

   16 while_clause: WHILE '(' expr ')'

   17 selection_statement: if_clause statement
   18                    | if_clause statement else_clause statement

   19 if_clause: IF '(' expr ')'

   20 else_clause: ELSE

   21 declaration_statement: var_type var_dlist ';'

   22 var_dlist: single_decl ',' var_dlist
   23          | single_decl

   24 single_decl: decl_name opt_init

   25 decl_name: IDENTIFIER

   26 var_type: INT
   27         | FLOAT
   28         | CHAR

   29 opt_init: '=' expr
   30         | /* empty */

   31 primary_expr: CONSTANT
   32             | IDENTIFIER
   33             | '(' expr ')'

   34 expr: primary_expr
   35     | '!' expr
   36     | '~' expr
   37     | '-' expr
   38     | INC_OP expr
   39     | DEC_OP expr
   40     | expr '*' expr
   41     | expr '/' expr
   42     | expr '%' expr
   43     | expr '+' expr
   44     | expr '-' expr
   45     | expr LSHFT_OP expr
   46     | expr RSHFT_OP expr
   47     | expr '>' expr
   48     | expr '<' expr
   49     | expr LE_OP expr
   50     | expr GE_OP expr
   51     | expr EQ_OP expr
   52     | expr NE_OP expr
   53     | expr '|' expr
   54     | expr '^' expr
   55     | expr '&' expr
   56     | expr AND_OP expr
   57     | expr OR_OP expr
   58     | primary_expr '=' expr


Terminals, with rules where they appear

$end (0) 0
'!' (33) 35
'%' (37) 42
'&' (38) 55
'(' (40) 16 19 33
')' (41) 16 19 33
'*' (42) 40
'+' (43) 43
',' (44) 22
'-' (45) 37 44
'/' (47) 41
';' (59) 9 10 11 12 13 21
'<' (60) 48
'=' (61) 29 58
'>' (62) 47
'^' (94) 54
'|' (124) 53
'~' (126) 36
error (256) 6
OR_OP (258) 57
AND_OP (259) 56
EQ_OP (260) 51
NE_OP (261) 52
LE_OP (262) 49
GE_OP (263) 50
LSHFT_OP (264) 45
RSHFT_OP (265) 46
INC_OP (266) 38
DEC_OP (267) 39
TYPEDEF (268)
EXTERN (269)
STATIC (270)
AUTO (271)
REGISTER (272)
CHAR (273) 28
SHORT (274)
INT (275) 26
LONG (276)
SIGNED (277)
UNSIGNED (278)
FLOAT (279) 27
DOUBLE (280)
CONST (281)
VOLATILE (282)
VOID (283)
STRUCT (284)
UNION (285)
ENUM (286)
ELLIPSIS (287)
CASE (288)
DEFAULT (289)
IF (290) 19
ELSE (291) 20
SWITCH (292)
WHILE (293) 16
DO (294)
FOR (295)
GOTO (296) 13
CONTINUE (297) 11
BREAK (298) 12
RETURN (299)
SIZEOF (300)
CONSTANT (301) 31
IDENTIFIER (302) 13 25 32
UMINUS (303)


Nonterminals, with rules where they appear

$accept (66)
    on left: 0
input (67)
    on left: 1 2, on right: 0 2
statement (68)
    on left: 3 4 5 6 7 8, on right: 2 15 17 18
expression_statement (69)
    on left: 9 10, on right: 5
jump_statement (70)
    on left: 11 12 13, on right: 4
iterative_statement (71)
    on left: 14, on right: 8
while_loop (72)
    on left: 15, on right: 14
while_clause (73)
    on left: 16, on right: 15
selection_statement (74)
    on left: 17 18, on right: 7
if_clause (75)
    on left: 19, on right: 17 18
else_clause (76)
    on left: 20, on right: 18
declaration_statement (77)
    on left: 21, on right: 3
var_dlist (78)
    on left: 22 23, on right: 21 22
single_decl (79)
    on left: 24, on right: 22 23
decl_name (80)
    on left: 25, on right: 24
var_type (81)
    on left: 26 27 28, on right: 21
opt_init (82)
    on left: 29 30, on right: 24
primary_expr (83)
    on left: 31 32 33, on right: 34 58
expr (84)
    on left: 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51
    52 53 54 55 56 57 58, on right: 9 16 19 29 33 35 36 37 38 39 40
    41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58


state 0

    0 $accept: . input $end

    $default  reduce using rule 1 (input)

    input  go to state 1


state 1

    0 $accept: input . $end
    2 input: input . statement

    $end        shift, and go to state 2
    error       shift, and go to state 3
    INC_OP      shift, and go to state 4
    DEC_OP      shift, and go to state 5
    CHAR        shift, and go to state 6
    INT         shift, and go to state 7
    FLOAT       shift, and go to state 8
    IF          shift, and go to state 9
    WHILE       shift, and go to state 10
    GOTO        shift, and go to state 11
    CONTINUE    shift, and go to state 12
    BREAK       shift, and go to state 13
    CONSTANT    shift, and go to state 14
    IDENTIFIER  shift, and go to state 15
    '-'         shift, and go to state 16
    '!'         shift, and go to state 17
    '~'         shift, and go to state 18
    ';'         shift, and go to state 19
    '('         shift, and go to state 20

    statement              go to state 21
    expression_statement   go to state 22
    jump_statement         go to state 23
    iterative_statement    go to state 24
    while_loop             go to state 25
    while_clause           go to state 26
    selection_statement    go to state 27
    if_clause              go to state 28
    declaration_statement  go to state 29
    var_type               go to state 30
    primary_expr           go to state 31
    expr                   go to state 32


state 2

    0 $accept: input $end .

    $default  accept


state 3

    6 statement: error .

    $default  reduce using rule 6 (statement)


state 4

   38 expr: INC_OP . expr

    INC_OP      shift, and go to state 4
    DEC_OP      shift, and go to state 5
    CONSTANT    shift, and go to state 14
    IDENTIFIER  shift, and go to state 15
    '-'         shift, and go to state 16
    '!'         shift, and go to state 17
    '~'         shift, and go to state 18
    '('         shift, and go to state 20

    primary_expr  go to state 31
    expr          go to state 33


state 5

   39 expr: DEC_OP . expr

    INC_OP      shift, and go to state 4
    DEC_OP      shift, and go to state 5
    CONSTANT    shift, and go to state 14
    IDENTIFIER  shift, and go to state 15
    '-'         shift, and go to state 16
    '!'         shift, and go to state 17
    '~'         shift, and go to state 18
    '('         shift, and go to state 20

    primary_expr  go to state 31
    expr          go to state 34


state 6

   28 var_type: CHAR .

    $default  reduce using rule 28 (var_type)


state 7

   26 var_type: INT .

    $default  reduce using rule 26 (var_type)


state 8

   27 var_type: FLOAT .

    $default  reduce using rule 27 (var_type)


state 9

   19 if_clause: IF . '(' expr ')'

    '('  shift, and go to state 35


state 10

   16 while_clause: WHILE . '(' expr ')'

    '('  shift, and go to state 36


state 11

   13 jump_statement: GOTO . IDENTIFIER ';'

    IDENTIFIER  shift, and go to state 37


state 12

   11 jump_statement: CONTINUE . ';'

    ';'  shift, and go to state 38


state 13

   12 jump_statement: BREAK . ';'

    ';'  shift, and go to state 39


state 14

   31 primary_expr: CONSTANT .

    $default  reduce using rule 31 (primary_expr)


state 15

   32 primary_expr: IDENTIFIER .

    $default  reduce using rule 32 (primary_expr)


state 16

   37 expr: '-' . expr

    INC_OP      shift, and go to state 4
    DEC_OP      shift, and go to state 5
    CONSTANT    shift, and go to state 14
    IDENTIFIER  shift, and go to state 15
    '-'         shift, and go to state 16
    '!'         shift, and go to state 17
    '~'         shift, and go to state 18
    '('         shift, and go to state 20

    primary_expr  go to state 31
    expr          go to state 40


state 17

   35 expr: '!' . expr

    INC_OP      shift, and go to state 4
    DEC_OP      shift, and go to state 5
    CONSTANT    shift, and go to state 14
    IDENTIFIER  shift, and go to state 15
    '-'         shift, and go to state 16
    '!'         shift, and go to state 17
    '~'         shift, and go to state 18
    '('         shift, and go to state 20

    primary_expr  go to state 31
    expr          go to state 41


state 18

   36 expr: '~' . expr

    INC_OP      shift, and go to state 4
    DEC_OP      shift, and go to state 5
    CONSTANT    shift, and go to state 14
    IDENTIFIER  shift, and go to state 15
    '-'         shift, and go to state 16
    '!'         shift, and go to state 17
    '~'         shift, and go to state 18
    '('         shift, and go to state 20

    primary_expr  go to state 31
    expr          go to state 42


state 19

   10 expression_statement: ';' .

    $default  reduce using rule 10 (expression_statement)


state 20

   33 primary_expr: '(' . expr ')'

    INC_OP      shift, and go to state 4
    DEC_OP      shift, and go to state 5
    CONSTANT    shift, and go to state 14
    IDENTIFIER  shift, and go to state 15
    '-'         shift, and go to state 16
    '!'         shift, and go to state 17
    '~'         shift, and go to state 18
    '('         shift, and go to state 20

    primary_expr  go to state 31
    expr          go to state 43


state 21

    2 input: input statement .

    $default  reduce using rule 2 (input)


state 22

    5 statement: expression_statement .

    $default  reduce using rule 5 (statement)


state 23

    4 statement: jump_statement .

    $default  reduce using rule 4 (statement)


state 24

    8 statement: iterative_statement .

    $default  reduce using rule 8 (statement)


state 25

   14 iterative_statement: while_loop .

    $default  reduce using rule 14 (iterative_statement)


state 26

   15 while_loop: while_clause . statement

    error       shift, and go to state 3
    INC_OP      shift, and go to state 4
    DEC_OP      shift, and go to state 5
    CHAR        shift, and go to state 6
    INT         shift, and go to state 7
    FLOAT       shift, and go to state 8
    IF          shift, and go to state 9
    WHILE       shift, and go to state 10
    GOTO        shift, and go to state 11
    CONTINUE    shift, and go to state 12
    BREAK       shift, and go to state 13
    CONSTANT    shift, and go to state 14
    IDENTIFIER  shift, and go to state 15
    '-'         shift, and go to state 16
    '!'         shift, and go to state 17
    '~'         shift, and go to state 18
    ';'         shift, and go to state 19
    '('         shift, and go to state 20

    statement              go to state 44
    expression_statement   go to state 22
    jump_statement         go to state 23
    iterative_statement    go to state 24
    while_loop             go to state 25
    while_clause           go to state 26
    selection_statement    go to state 27
    if_clause              go to state 28
    declaration_statement  go to state 29
    var_type               go to state 30
    primary_expr           go to state 31
    expr                   go to state 32


state 27

    7 statement: selection_statement .

    $default  reduce using rule 7 (statement)


state 28

   17 selection_statement: if_clause . statement
   18                    | if_clause . statement else_clause statement

    error       shift, and go to state 3
    INC_OP      shift, and go to state 4
    DEC_OP      shift, and go to state 5
    CHAR        shift, and go to state 6
    INT         shift, and go to state 7
    FLOAT       shift, and go to state 8
    IF          shift, and go to state 9
    WHILE       shift, and go to state 10
    GOTO        shift, and go to state 11
    CONTINUE    shift, and go to state 12
    BREAK       shift, and go to state 13
    CONSTANT    shift, and go to state 14
    IDENTIFIER  shift, and go to state 15
    '-'         shift, and go to state 16
    '!'         shift, and go to state 17
    '~'         shift, and go to state 18
    ';'         shift, and go to state 19
    '('         shift, and go to state 20

    statement              go to state 45
    expression_statement   go to state 22
    jump_statement         go to state 23
    iterative_statement    go to state 24
    while_loop             go to state 25
    while_clause           go to state 26
    selection_statement    go to state 27
    if_clause              go to state 28
    declaration_statement  go to state 29
    var_type               go to state 30
    primary_expr           go to state 31
    expr                   go to state 32


state 29

    3 statement: declaration_statement .

    $default  reduce using rule 3 (statement)


state 30

   21 declaration_statement: var_type . var_dlist ';'

    IDENTIFIER  shift, and go to state 46

    var_dlist    go to state 47
    single_decl  go to state 48
    decl_name    go to state 49


state 31

   34 expr: primary_expr .
   58     | primary_expr . '=' expr

    '='  shift, and go to state 50

    $default  reduce using rule 34 (expr)


state 32

    9 expression_statement: expr . ';'
   40 expr: expr . '*' expr
   41     | expr . '/' expr
   42     | expr . '%' expr
   43     | expr . '+' expr
   44     | expr . '-' expr
   45     | expr . LSHFT_OP expr
   46     | expr . RSHFT_OP expr
   47     | expr . '>' expr
   48     | expr . '<' expr
   49     | expr . LE_OP expr
   50     | expr . GE_OP expr
   51     | expr . EQ_OP expr
   52     | expr . NE_OP expr
   53     | expr . '|' expr
   54     | expr . '^' expr
   55     | expr . '&' expr
   56     | expr . AND_OP expr
   57     | expr . OR_OP expr

    OR_OP     shift, and go to state 51
    AND_OP    shift, and go to state 52
    EQ_OP     shift, and go to state 53
    NE_OP     shift, and go to state 54
    LE_OP     shift, and go to state 55
    GE_OP     shift, and go to state 56
    LSHFT_OP  shift, and go to state 57
    RSHFT_OP  shift, and go to state 58
    '&'       shift, and go to state 59
    '^'       shift, and go to state 60
    '|'       shift, and go to state 61
    '<'       shift, and go to state 62
    '>'       shift, and go to state 63
    '-'       shift, and go to state 64
    '+'       shift, and go to state 65
    '*'       shift, and go to state 66
    '/'       shift, and go to state 67
    '%'       shift, and go to state 68
    ';'       shift, and go to state 69


state 33

   38 expr: INC_OP expr .
   40     | expr . '*' expr
   41     | expr . '/' expr
   42     | expr . '%' expr
   43     | expr . '+' expr
   44     | expr . '-' expr
   45     | expr . LSHFT_OP expr
   46     | expr . RSHFT_OP expr
   47     | expr . '>' expr
   48     | expr . '<' expr
   49     | expr . LE_OP expr
   50     | expr . GE_OP expr
   51     | expr . EQ_OP expr
   52     | expr . NE_OP expr
   53     | expr . '|' expr
   54     | expr . '^' expr
   55     | expr . '&' expr
   56     | expr . AND_OP expr
   57     | expr . OR_OP expr

    $default  reduce using rule 38 (expr)


state 34

   39 expr: DEC_OP expr .
   40     | expr . '*' expr
   41     | expr . '/' expr
   42     | expr . '%' expr
   43     | expr . '+' expr
   44     | expr . '-' expr
   45     | expr . LSHFT_OP expr
   46     | expr . RSHFT_OP expr
   47     | expr . '>' expr
   48     | expr . '<' expr
   49     | expr . LE_OP expr
   50     | expr . GE_OP expr
   51     | expr . EQ_OP expr
   52     | expr . NE_OP expr
   53     | expr . '|' expr
   54     | expr . '^' expr
   55     | expr . '&' expr
   56     | expr . AND_OP expr
   57     | expr . OR_OP expr

    $default  reduce using rule 39 (expr)


state 35

   19 if_clause: IF '(' . expr ')'

    INC_OP      shift, and go to state 4
    DEC_OP      shift, and go to state 5
    CONSTANT    shift, and go to state 14
    IDENTIFIER  shift, and go to state 15
    '-'         shift, and go to state 16
    '!'         shift, and go to state 17
    '~'         shift, and go to state 18
    '('         shift, and go to state 20

    primary_expr  go to state 31
    expr          go to state 70


state 36

   16 while_clause: WHILE '(' . expr ')'

    INC_OP      shift, and go to state 4
    DEC_OP      shift, and go to state 5
    CONSTANT    shift, and go to state 14
    IDENTIFIER  shift, and go to state 15
    '-'         shift, and go to state 16
    '!'         shift, and go to state 17
    '~'         shift, and go to state 18
    '('         shift, and go to state 20

    primary_expr  go to state 31
    expr          go to state 71


state 37

   13 jump_statement: GOTO IDENTIFIER . ';'

    ';'  shift, and go to state 72


state 38

   11 jump_statement: CONTINUE ';' .

    $default  reduce using rule 11 (jump_statement)


state 39

   12 jump_statement: BREAK ';' .

    $default  reduce using rule 12 (jump_statement)


state 40

   37 expr: '-' expr .
   40     | expr . '*' expr
   41     | expr . '/' expr
   42     | expr . '%' expr
   43     | expr . '+' expr
   44     | expr . '-' expr
   45     | expr . LSHFT_OP expr
   46     | expr . RSHFT_OP expr
   47     | expr . '>' expr
   48     | expr . '<' expr
   49     | expr . LE_OP expr
   50     | expr . GE_OP expr
   51     | expr . EQ_OP expr
   52     | expr . NE_OP expr
   53     | expr . '|' expr
   54     | expr . '^' expr
   55     | expr . '&' expr
   56     | expr . AND_OP expr
   57     | expr . OR_OP expr

    $default  reduce using rule 37 (expr)


state 41

   35 expr: '!' expr .
   40     | expr . '*' expr
   41     | expr . '/' expr
   42     | expr . '%' expr
   43     | expr . '+' expr
   44     | expr . '-' expr
   45     | expr . LSHFT_OP expr
   46     | expr . RSHFT_OP expr
   47     | expr . '>' expr
   48     | expr . '<' expr
   49     | expr . LE_OP expr
   50     | expr . GE_OP expr
   51     | expr . EQ_OP expr
   52     | expr . NE_OP expr
   53     | expr . '|' expr
   54     | expr . '^' expr
   55     | expr . '&' expr
   56     | expr . AND_OP expr
   57     | expr . OR_OP expr

    $default  reduce using rule 35 (expr)


state 42

   36 expr: '~' expr .
   40     | expr . '*' expr
   41     | expr . '/' expr
   42     | expr . '%' expr
   43     | expr . '+' expr
   44     | expr . '-' expr
   45     | expr . LSHFT_OP expr
   46     | expr . RSHFT_OP expr
   47     | expr . '>' expr
   48     | expr . '<' expr
   49     | expr . LE_OP expr
   50     | expr . GE_OP expr
   51     | expr . EQ_OP expr
   52     | expr . NE_OP expr
   53     | expr . '|' expr
   54     | expr . '^' expr
   55     | expr . '&' expr
   56     | expr . AND_OP expr
   57     | expr . OR_OP expr

    $default  reduce using rule 36 (expr)


state 43

   33 primary_expr: '(' expr . ')'
   40 expr: expr . '*' expr
   41     | expr . '/' expr
   42     | expr . '%' expr
   43     | expr . '+' expr
   44     | expr . '-' expr
   45     | expr . LSHFT_OP expr
   46     | expr . RSHFT_OP expr
   47     | expr . '>' expr
   48     | expr . '<' expr
   49     | expr . LE_OP expr
   50     | expr . GE_OP expr
   51     | expr . EQ_OP expr
   52     | expr . NE_OP expr
   53     | expr . '|' expr
   54     | expr . '^' expr
   55     | expr . '&' expr
   56     | expr . AND_OP expr
   57     | expr . OR_OP expr

    OR_OP     shift, and go to state 51
    AND_OP    shift, and go to state 52
    EQ_OP     shift, and go to state 53
    NE_OP     shift, and go to state 54
    LE_OP     shift, and go to state 55
    GE_OP     shift, and go to state 56
    LSHFT_OP  shift, and go to state 57
    RSHFT_OP  shift, and go to state 58
    '&'       shift, and go to state 59
    '^'       shift, and go to state 60
    '|'       shift, and go to state 61
    '<'       shift, and go to state 62
    '>'       shift, and go to state 63
    '-'       shift, and go to state 64
    '+'       shift, and go to state 65
    '*'       shift, and go to state 66
    '/'       shift, and go to state 67
    '%'       shift, and go to state 68
    ')'       shift, and go to state 73


state 44

   15 while_loop: while_clause statement .

    $default  reduce using rule 15 (while_loop)


state 45

   17 selection_statement: if_clause statement .
   18                    | if_clause statement . else_clause statement

    ELSE  shift, and go to state 74

    ELSE      [reduce using rule 17 (selection_statement)]
    $default  reduce using rule 17 (selection_statement)

    else_clause  go to state 75


state 46

   25 decl_name: IDENTIFIER .

    $default  reduce using rule 25 (decl_name)


state 47

   21 declaration_statement: var_type var_dlist . ';'

    ';'  shift, and go to state 76


state 48

   22 var_dlist: single_decl . ',' var_dlist
   23          | single_decl .

    ','  shift, and go to state 77

    $default  reduce using rule 23 (var_dlist)


state 49

   24 single_decl: decl_name . opt_init

    '='  shift, and go to state 78

    $default  reduce using rule 30 (opt_init)

    opt_init  go to state 79


state 50

   58 expr: primary_expr '=' . expr

    INC_OP      shift, and go to state 4
    DEC_OP      shift, and go to state 5
    CONSTANT    shift, and go to state 14
    IDENTIFIER  shift, and go to state 15
    '-'         shift, and go to state 16
    '!'         shift, and go to state 17
    '~'         shift, and go to state 18
    '('         shift, and go to state 20

    primary_expr  go to state 31
    expr          go to state 80


state 51

   57 expr: expr OR_OP . expr

    INC_OP      shift, and go to state 4
    DEC_OP      shift, and go to state 5
    CONSTANT    shift, and go to state 14
    IDENTIFIER  shift, and go to state 15
    '-'         shift, and go to state 16
    '!'         shift, and go to state 17
    '~'         shift, and go to state 18
    '('         shift, and go to state 20

    primary_expr  go to state 31
    expr          go to state 81


state 52

   56 expr: expr AND_OP . expr

    INC_OP      shift, and go to state 4
    DEC_OP      shift, and go to state 5
    CONSTANT    shift, and go to state 14
    IDENTIFIER  shift, and go to state 15
    '-'         shift, and go to state 16
    '!'         shift, and go to state 17
    '~'         shift, and go to state 18
    '('         shift, and go to state 20

    primary_expr  go to state 31
    expr          go to state 82


state 53

   51 expr: expr EQ_OP . expr

    INC_OP      shift, and go to state 4
    DEC_OP      shift, and go to state 5
    CONSTANT    shift, and go to state 14
    IDENTIFIER  shift, and go to state 15
    '-'         shift, and go to state 16
    '!'         shift, and go to state 17
    '~'         shift, and go to state 18
    '('         shift, and go to state 20

    primary_expr  go to state 31
    expr          go to state 83


state 54

   52 expr: expr NE_OP . expr

    INC_OP      shift, and go to state 4
    DEC_OP      shift, and go to state 5
    CONSTANT    shift, and go to state 14
    IDENTIFIER  shift, and go to state 15
    '-'         shift, and go to state 16
    '!'         shift, and go to state 17
    '~'         shift, and go to state 18
    '('         shift, and go to state 20

    primary_expr  go to state 31
    expr          go to state 84


state 55

   49 expr: expr LE_OP . expr

    INC_OP      shift, and go to state 4
    DEC_OP      shift, and go to state 5
    CONSTANT    shift, and go to state 14
    IDENTIFIER  shift, and go to state 15
    '-'         shift, and go to state 16
    '!'         shift, and go to state 17
    '~'         shift, and go to state 18
    '('         shift, and go to state 20

    primary_expr  go to state 31
    expr          go to state 85


state 56

   50 expr: expr GE_OP . expr

    INC_OP      shift, and go to state 4
    DEC_OP      shift, and go to state 5
    CONSTANT    shift, and go to state 14
    IDENTIFIER  shift, and go to state 15
    '-'         shift, and go to state 16
    '!'         shift, and go to state 17
    '~'         shift, and go to state 18
    '('         shift, and go to state 20

    primary_expr  go to state 31
    expr          go to state 86


state 57

   45 expr: expr LSHFT_OP . expr

    INC_OP      shift, and go to state 4
    DEC_OP      shift, and go to state 5
    CONSTANT    shift, and go to state 14
    IDENTIFIER  shift, and go to state 15
    '-'         shift, and go to state 16
    '!'         shift, and go to state 17
    '~'         shift, and go to state 18
    '('         shift, and go to state 20

    primary_expr  go to state 31
    expr          go to state 87


state 58

   46 expr: expr RSHFT_OP . expr

    INC_OP      shift, and go to state 4
    DEC_OP      shift, and go to state 5
    CONSTANT    shift, and go to state 14
    IDENTIFIER  shift, and go to state 15
    '-'         shift, and go to state 16
    '!'         shift, and go to state 17
    '~'         shift, and go to state 18
    '('         shift, and go to state 20

    primary_expr  go to state 31
    expr          go to state 88


state 59

   55 expr: expr '&' . expr

    INC_OP      shift, and go to state 4
    DEC_OP      shift, and go to state 5
    CONSTANT    shift, and go to state 14
    IDENTIFIER  shift, and go to state 15
    '-'         shift, and go to state 16
    '!'         shift, and go to state 17
    '~'         shift, and go to state 18
    '('         shift, and go to state 20

    primary_expr  go to state 31
    expr          go to state 89


state 60

   54 expr: expr '^' . expr

    INC_OP      shift, and go to state 4
    DEC_OP      shift, and go to state 5
    CONSTANT    shift, and go to state 14
    IDENTIFIER  shift, and go to state 15
    '-'         shift, and go to state 16
    '!'         shift, and go to state 17
    '~'         shift, and go to state 18
    '('         shift, and go to state 20

    primary_expr  go to state 31
    expr          go to state 90


state 61

   53 expr: expr '|' . expr

    INC_OP      shift, and go to state 4
    DEC_OP      shift, and go to state 5
    CONSTANT    shift, and go to state 14
    IDENTIFIER  shift, and go to state 15
    '-'         shift, and go to state 16
    '!'         shift, and go to state 17
    '~'         shift, and go to state 18
    '('         shift, and go to state 20

    primary_expr  go to state 31
    expr          go to state 91


state 62

   48 expr: expr '<' . expr

    INC_OP      shift, and go to state 4
    DEC_OP      shift, and go to state 5
    CONSTANT    shift, and go to state 14
    IDENTIFIER  shift, and go to state 15
    '-'         shift, and go to state 16
    '!'         shift, and go to state 17
    '~'         shift, and go to state 18
    '('         shift, and go to state 20

    primary_expr  go to state 31
    expr          go to state 92


state 63

   47 expr: expr '>' . expr

    INC_OP      shift, and go to state 4
    DEC_OP      shift, and go to state 5
    CONSTANT    shift, and go to state 14
    IDENTIFIER  shift, and go to state 15
    '-'         shift, and go to state 16
    '!'         shift, and go to state 17
    '~'         shift, and go to state 18
    '('         shift, and go to state 20

    primary_expr  go to state 31
    expr          go to state 93


state 64

   44 expr: expr '-' . expr

    INC_OP      shift, and go to state 4
    DEC_OP      shift, and go to state 5
    CONSTANT    shift, and go to state 14
    IDENTIFIER  shift, and go to state 15
    '-'         shift, and go to state 16
    '!'         shift, and go to state 17
    '~'         shift, and go to state 18
    '('         shift, and go to state 20

    primary_expr  go to state 31
    expr          go to state 94


state 65

   43 expr: expr '+' . expr

    INC_OP      shift, and go to state 4
    DEC_OP      shift, and go to state 5
    CONSTANT    shift, and go to state 14
    IDENTIFIER  shift, and go to state 15
    '-'         shift, and go to state 16
    '!'         shift, and go to state 17
    '~'         shift, and go to state 18
    '('         shift, and go to state 20

    primary_expr  go to state 31
    expr          go to state 95


state 66

   40 expr: expr '*' . expr

    INC_OP      shift, and go to state 4
    DEC_OP      shift, and go to state 5
    CONSTANT    shift, and go to state 14
    IDENTIFIER  shift, and go to state 15
    '-'         shift, and go to state 16
    '!'         shift, and go to state 17
    '~'         shift, and go to state 18
    '('         shift, and go to state 20

    primary_expr  go to state 31
    expr          go to state 96


state 67

   41 expr: expr '/' . expr

    INC_OP      shift, and go to state 4
    DEC_OP      shift, and go to state 5
    CONSTANT    shift, and go to state 14
    IDENTIFIER  shift, and go to state 15
    '-'         shift, and go to state 16
    '!'         shift, and go to state 17
    '~'         shift, and go to state 18
    '('         shift, and go to state 20

    primary_expr  go to state 31
    expr          go to state 97


state 68

   42 expr: expr '%' . expr

    INC_OP      shift, and go to state 4
    DEC_OP      shift, and go to state 5
    CONSTANT    shift, and go to state 14
    IDENTIFIER  shift, and go to state 15
    '-'         shift, and go to state 16
    '!'         shift, and go to state 17
    '~'         shift, and go to state 18
    '('         shift, and go to state 20

    primary_expr  go to state 31
    expr          go to state 98


state 69

    9 expression_statement: expr ';' .

    $default  reduce using rule 9 (expression_statement)


state 70

   19 if_clause: IF '(' expr . ')'
   40 expr: expr . '*' expr
   41     | expr . '/' expr
   42     | expr . '%' expr
   43     | expr . '+' expr
   44     | expr . '-' expr
   45     | expr . LSHFT_OP expr
   46     | expr . RSHFT_OP expr
   47     | expr . '>' expr
   48     | expr . '<' expr
   49     | expr . LE_OP expr
   50     | expr . GE_OP expr
   51     | expr . EQ_OP expr
   52     | expr . NE_OP expr
   53     | expr . '|' expr
   54     | expr . '^' expr
   55     | expr . '&' expr
   56     | expr . AND_OP expr
   57     | expr . OR_OP expr

    OR_OP     shift, and go to state 51
    AND_OP    shift, and go to state 52
    EQ_OP     shift, and go to state 53
    NE_OP     shift, and go to state 54
    LE_OP     shift, and go to state 55
    GE_OP     shift, and go to state 56
    LSHFT_OP  shift, and go to state 57
    RSHFT_OP  shift, and go to state 58
    '&'       shift, and go to state 59
    '^'       shift, and go to state 60
    '|'       shift, and go to state 61
    '<'       shift, and go to state 62
    '>'       shift, and go to state 63
    '-'       shift, and go to state 64
    '+'       shift, and go to state 65
    '*'       shift, and go to state 66
    '/'       shift, and go to state 67
    '%'       shift, and go to state 68
    ')'       shift, and go to state 99


state 71

   16 while_clause: WHILE '(' expr . ')'
   40 expr: expr . '*' expr
   41     | expr . '/' expr
   42     | expr . '%' expr
   43     | expr . '+' expr
   44     | expr . '-' expr
   45     | expr . LSHFT_OP expr
   46     | expr . RSHFT_OP expr
   47     | expr . '>' expr
   48     | expr . '<' expr
   49     | expr . LE_OP expr
   50     | expr . GE_OP expr
   51     | expr . EQ_OP expr
   52     | expr . NE_OP expr
   53     | expr . '|' expr
   54     | expr . '^' expr
   55     | expr . '&' expr
   56     | expr . AND_OP expr
   57     | expr . OR_OP expr

    OR_OP     shift, and go to state 51
    AND_OP    shift, and go to state 52
    EQ_OP     shift, and go to state 53
    NE_OP     shift, and go to state 54
    LE_OP     shift, and go to state 55
    GE_OP     shift, and go to state 56
    LSHFT_OP  shift, and go to state 57
    RSHFT_OP  shift, and go to state 58
    '&'       shift, and go to state 59
    '^'       shift, and go to state 60
    '|'       shift, and go to state 61
    '<'       shift, and go to state 62
    '>'       shift, and go to state 63
    '-'       shift, and go to state 64
    '+'       shift, and go to state 65
    '*'       shift, and go to state 66
    '/'       shift, and go to state 67
    '%'       shift, and go to state 68
    ')'       shift, and go to state 100


state 72

   13 jump_statement: GOTO IDENTIFIER ';' .

    $default  reduce using rule 13 (jump_statement)


state 73

   33 primary_expr: '(' expr ')' .

    $default  reduce using rule 33 (primary_expr)


state 74

   20 else_clause: ELSE .

    $default  reduce using rule 20 (else_clause)


state 75

   18 selection_statement: if_clause statement else_clause . statement

    error       shift, and go to state 3
    INC_OP      shift, and go to state 4
    DEC_OP      shift, and go to state 5
    CHAR        shift, and go to state 6
    INT         shift, and go to state 7
    FLOAT       shift, and go to state 8
    IF          shift, and go to state 9
    WHILE       shift, and go to state 10
    GOTO        shift, and go to state 11
    CONTINUE    shift, and go to state 12
    BREAK       shift, and go to state 13
    CONSTANT    shift, and go to state 14
    IDENTIFIER  shift, and go to state 15
    '-'         shift, and go to state 16
    '!'         shift, and go to state 17
    '~'         shift, and go to state 18
    ';'         shift, and go to state 19
    '('         shift, and go to state 20

    statement              go to state 101
    expression_statement   go to state 22
    jump_statement         go to state 23
    iterative_statement    go to state 24
    while_loop             go to state 25
    while_clause           go to state 26
    selection_statement    go to state 27
    if_clause              go to state 28
    declaration_statement  go to state 29
    var_type               go to state 30
    primary_expr           go to state 31
    expr                   go to state 32


state 76

   21 declaration_statement: var_type var_dlist ';' .

    $default  reduce using rule 21 (declaration_statement)


state 77

   22 var_dlist: single_decl ',' . var_dlist

    IDENTIFIER  shift, and go to state 46

    var_dlist    go to state 102
    single_decl  go to state 48
    decl_name    go to state 49


state 78

   29 opt_init: '=' . expr
